--- a/curso2013/index.html
+++ b/curso2013/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<META http-equiv="refresh" content="0;URL=http://arduino-minas.github.com/Curso2013
+<META http-equiv="refresh" content="0;URL=http://arduino-minas.github.com/Curso2013" />
 </head>
 </html>
