--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<html>
-<title>Arduino Minas</title>
-</html>
-<body>
+---
+layout: index
+---
 <h1>Estamos em Construção</h1>
 <hr />
 
-<p>Estamos trabalhando por um novo layout para nosso site!</p>
-<p>Não deixe de nos visitar usando o Link: http://arduinominas.com.br, Pelo Twitter @ArduinoMinas,
-no Facebook: http://fb.me/ArduinoMinas</p>
-</body>
+<p align="justify">Estamos trabalhando em um novo layout para nosso site!</p>
+<p align="justify">Não deixe de nos visitar usando um dos Linsk: 
+	<ul>
+	<li>[http://arduinominas.com.br](http://arduinominas.com.br),
+	</li> 
+	<li>[Twitter @ArduinoMinas](http://twitter/ArduinoMinas),
+	</li>
+	<li>[Fanpage no Facebook](http://fb.me/ArduinoMinas),
+	</li> 
+	<li>[Grupos no Facebook](http://fb.me/groups/ArduinoMinas)
+	</li>
+	</ul>
+</p>
