--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@ title: Categorias
 <!-- categories -->	
 {% for category in site.categories %}
 <div class="box">
-	<h1>{{ category | first }}<a name="{{ category | first | cgi_escape }}"></a></h1>
+	<h1>{{ category | first }}<a name="{{ category | cgi_escape }}"></a></h1>
 	<ul class="postList">	
 	{% for posts in category %}
       {% for post in posts %}
