--- a/phrases.html
+++ b/phrases.html
@@ -2,3 +2,16 @@
 layout: phrases 
 title: Frases 
 ---
+<div class="box">
+	{% for post in site.posts %} 
+	{% if  post.category || downcase  = {{ site.phrases | downcase }} %}
+	<blockquote>
+		<p>
+			<span>&quot;</span> {{ post.excerpt }} <span>&quot;</span>
+		</p>
+		<cite>{{ post.author }}</cite>
+	</blockquote>
+	{% endif %}
+	{% endfor %}
+	</ul>
+</div>
