--- a/use.html
+++ b/use.html
@@ -2,8 +2,18 @@
 layout: noindex
 ---
 <h1>Estamos em Construção</h1>
-<hr />
 
-<p>Estamos trabalhando por um novo layout para nosso site!</p>
-<p>Não deixe de nos visitar usando o Link: http://arduinominas.com.br, Pelo Twitter @ArduinoMinas,
-no Facebook: http://fb.me/ArduinoMinas</p>
+<hr />
+<p align="justify">Estamos trabalhando em um novo layout para nosso site!</p>
+<p align="justify">Não deixe de nos visitar usando um dos Linsk: 
+	<ul>
+	<li><a href="https://groups.google.com/forum/?hl=pt-BR&fromgroups#!forum/arduino-minas">Google Groups</a>
+	</li> 
+	<li><a href="http://twitter/ArduinoMinas">Twitter @ArduinoMinas</a>
+	</li>
+	<li><a href="http://fb.me/ArduinoMinas">Fanpage no Facebook</a>
+	</li> 
+	<li><a href="http://fb.me/groups/ArduinoMinas">Grupos no Facebook</a>
+	</li>
+	</ul>
+</p>
