--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@ title: Categorias
 <!-- categories -->	
 {% for category in site.categories %}
 <div class="box">
-	<a name="#{{ category | first | cgi_escape }}" /><h1>{{ category | first }}</h1>
+	<h1><a id="#{{ category | first | cgi_escape }}" />{{ category | first }}</a></h1>
 	<ul class="postList">
 	{% for posts in category %}
       {% for post in posts %}
