--- a/tags.html
+++ b/tags.html
@@ -5,7 +5,7 @@ title: Tags
 <!-- categories -->	
 {% for tag in site.tags %}
 <div class="box">
-	<a href="#{{ tag | first | cgi_escape }}"></a><h1>{{ tag | first }}</h1>
+	<h1><a id="#{{ tag | first | cgi_escape }}">{{ tag | first }}</a></h1>
 	<ul class="postList">	
 	{% for posts in tag %}
       {% for post in posts %}
