pequenas correçòes no código.

--- a/simulador/index.html
+++ b/simulador/index.html
@@ -2,8 +2,8 @@
 layout: noindex
 title: Simulador de Circuito
 javascripts: ['/simulador/js/cktsim.js', '/simulador/js/schematic.js']
-simulatorwidth=600
-simulatorheigth=600
+simulatorwidth: 600
+simulatorheigth: 600
 ---
 
 {% include simulador.html %} 
