usando botões da rede sociais no simulador.

--- a/simulador/index.html
+++ b/simulador/index.html
@@ -4,6 +4,7 @@ title: Simulador de Circuito
 javascripts: ['/simulador/js/cktsim.js', '/simulador/js/schematic.js']
 simulatorwidth: 600
 simulatorheigth: 600
+usesocialbuttons: true
 ---
 
 {% include simulador.html %} 
