--- a/simulador/index.html
+++ b/simulador/index.html
@@ -1,13 +1,10 @@
 ---
 layout: noindex
-title: Simulador de Circuito
-javascripts: ['/simulador/circuitos/js/cktsim.js', '/simulador/circuitos/js/schematic.js']
-simulatorwidth: 600
-simulatorheigth: 600
+title: Simuladores e Ferramentas de Calculo
 usesocialbuttons: true
 ---
-
-* Calculos de Resistores
-* Calculos de LED
-* [Circuitos](circuitos/)
-* Caclulos de Motor
+<h1> Ferramentas para Calculo e Simulação de Circuito</h1>
+ * Calculos de Resistores
+ * Calculos de LED
+ * [Circuitos](circuitos/)
+ * Caclulos de Motor
