correções na Formtação.

--- a/simulador/index.html
+++ b/simulador/index.html
@@ -3,8 +3,12 @@ layout: noindex
 title: Simuladores e Ferramentas de Calculo
 usesocialbuttons: true
 ---
-<h1> Ferramentas para Calculo e Simulação de Circuito</h1>
- * Calculos de Resistores
- * Calculos de LED
- * [Circuitos](circuitos/)
- * Caclulos de Motor
+
+<h1>Ferramentas para Calculo e Simulação de Circuito</h1>
+
+<ul>
+	<li>Calculos de Resistores</li>
+	<li>Calculos de LED</li>
+	<li><a href="circuitos/">Circuitos</a></li>
+	<li>Caclulos de Motor</li>
+</ul>
