--- a/sitemap.html
+++ b/sitemap.html
@@ -8,7 +8,9 @@ layout: noindex
 	</header>
 	<ul class="postList archive">
 	{% for page in site.pages %}
+	{% if page.title %}
 		<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+	{% endif %}
 	{% endfor %}
 	</ul>
 </article>
@@ -18,7 +20,9 @@ layout: noindex
 	</header>
 	<ul class="postList archive">
 	{% for post in site.posts %}
+	{% if post.title %}
 		<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+	{% endif %} 
 	{% endfor %}
 	</ul>
 </article>
