Mudei o redirecionado do curso arduino para o meu site, onde pretendo usar a ferramenta moodle para controlar as inscrições e conteudo do curso.

--- a/curso2013/index.html
+++ b/curso2013/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<META http-equiv="refresh" content="0;URL=http://arduino-minas.github.com/Curso2013" />
+<META http-equiv="refresh" content="0;URL=http://www.carlosdelfino.eti.br/cursoarduino" />
 </head>
 </html>
