--- a/tags.html
+++ b/tags.html
@@ -6,12 +6,12 @@ title: Tags
 <!-- begin tags -->	
 {% for tag in site.tags %}
 <div class="box">
-	<h1><a id="#{{ tag | first | cgi_escape }}" href="#{{ tag | first | cgi_escape }}">{{ tag | first }}</a></h1>
+	<h1><a id="#{{ tag | first | cgi_escape }}" name="#{{ tag | first | cgi_escape }}" href="#{{ tag | first | cgi_escape }}">{{ tag | first }}</a></h1>
 	<ul class="postList">
 	{% for posts in tag %}
 		{% for post in posts %}
 			{% if post.url %}
-		<li class="nested"><a href="{{ post.url }}" title="{{ post.excerpt }}">{{ post.title }} <span> {{ post.date | date: '%d.%m.%y' }}</span></a></li>
+		<li class="nested"><a id="href="{{ post.url }}" title="{{ post.excerpt }}">{{ post.title }} <span> {{ post.date | date: '%d.%m.%y' }}</span></a></li>
 			{% endif %}
 		{% endfor %}
 	{% endfor %}
