--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@ title: Tags
 <!-- begin tags -->	
 {% for tag in site.tags %}
 <div class="box">
-	<h1><a id="{{ tag | first | cgi_escape }}" name="{{ tag | first | cgi_escape }}" href="#{{ tag | first | cgi_escape }}">{{ tag | first }}</a></h1>
+	<h1><a id="{{ tag | cgi_escape }}" name="{{ tag | cgi_escape }}" href="#{{ tag | cgi_escape }}">{{ tag }}</a></h1>
 	<ul class="postList">
 	{% for posts in tag %}
 		{% for post in posts %}
