--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@ title: Categorias
 <!-- begin categories -->	
 {% for category in site.categories %}
 <div class="box">
-	<h1><a id="{{ category | cgi_escape }}" name="{{ category | cgi_escape }}" />{{ category }}</a></h1>
+	<h1><a id="{{ category | first | cgi_escape }}" name="{{ category | first | cgi_escape }}" />{{ category | first }}</a></h1>
 	<ul class="postList">
 	{% for posts in category %}
       {% for post in posts %}
