--- a/arduinoday/ppt-finais/Hello World Arduino/Arduino Day 2014 - BH - Hello World Arduino/assets/player/KeynoteDHTMLPlayer.html
+++ b/arduinoday/ppt-finais/Hello World Arduino/Arduino Day 2014 - BH - Hello World Arduino/assets/player/KeynoteDHTMLPlayer.html
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="SlideNumberController.js"></script>
         <script type="text/javascript" src="HelpPlacardController.js"></script>
         <script type="text/javascript" src="NarrationManager.js"></script>
+	<script async="" src="//www.google-analytics.com/analytics.js"></script>
 	</head>
     <body id="body" bgcolor="black">
         <div id="background" class="bigBlackSquare">
@@ -53,5 +54,21 @@
         	<div id="waitingSpinner">
         	</div>
         </div>
+        <script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', '//www.google-analytics.com/analytics.js',
+			'ga');
+
+	ga('create', 'UA-39638790-1', 'github.com');
+	ga('send', 'pageview');
+</script>
 	</body>
 </html>
