redirecionando usando metodos convencionais pelo html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-permalink: http://www.carlosdelfino.eti.br/cursoarduino
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=http://www.carlosdelfino.eti.br/cursoarduino"/>
+<link rel="canonical" href="http://www.carlosdelfino.eti.br/cursoarduino"/>
+</head>
+<body>
+</h1>Este Site não existe mais</h1>
+</h2>Visite: <a href="http://www.carlosdelfino.eti.br/cursoarduino">http://www.carlosdelfino.eti.br</a>
+</h2>
+</body>
+</html>
