Atualização do para inscrição do evento

--- a/arduinoday/index.html
+++ b/arduinoday/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Refresh" content="1;url=/arduinoday2018">
+    <meta http-equiv="Refresh" content="1;url=/arduinoday2018">
 </head>
 
 <body>
-<p>Arduino Day 2018, aguardem!</p>
+    <center>
+        <h1>Arduino Day 2018 em Aquiraz, Faça sua Pré-inscrição!</h1>
+    </center>
 </body>
 
 </html>
