Atualização do para inscrição do evento

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <h1>
 <a id="aguarde" class="anchor" href="#aguarde" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Aguarde!</h1>
 
-<a class="button-small-text" href="https://www.sympla.com.br/arduino-day-aquiraz-2018__256189" target="_blank"><img src="http://www.sympla.com.br/images/btn-register-widget.png" alt="" style="" /></a>
+      <h2>Para pré inscrição no arduino day 2018 cique no botão abaixo: </h2>
+      <a class="button-small-text" href="https://www.sympla.com.br/arduino-day-aquiraz-2018__256189" target="_blank"><img src="http://www.sympla.com.br/images/btn-register-widget.png" alt="" style="" /></a>
 
 <h1>
 <a id="estamos-trabalhando-em-um-novo-site" class="anchor" href="#estamos-trabalhando-em-um-novo-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Estamos trabalhando em um novo Site.</h1>
