--- a/index.html
+++ b/index.html
@@ -26,75 +26,13 @@ title: Início
 
         <!-- Featured
         ================================================== -->
-        <section class="featured-posts">
-
-            <div class="section-title">
-                <h2><span>Em Destaque</span></h2>
-            </div>
-    
-            <div class="row listfeaturedtag">
-
             {% for post in site.posts %}
-
                 {% if post.featured == true %}
-
                     {% include featuredbox.html %}
-
                 {% endif %}
-
             {% endfor %}
-
-            </div>
-
-
-
-        </section>
-
         <!-- Posts Index
         ================================================== -->
-         {% if paginator.previous_page %}
-            {% if paginator.previous_page > 0 %}
-                 <div id="jumptopageof"></div>
-            {% endif %}
-        {% endif %}    
-
-        <section class="recent-posts row">
-
-            <div class="col-sm-4">
-                 {% include sidebar.html ads='true' %}
-            </div>
-
-            <div class="col-sm-8">
-
-                <div class="section-title">
-                    <h2><span>Nossas Publicações</span></h2>    
-                </div>
-
-                <div class="masonrygrid row listrecent">
-
-                    {% for post in paginator.posts %}
-
-                    {% unless post.featured == true %}
-
-                        {% include postbox.html %}
-
-                    {% endunless %}
-
-                    {% endfor %}
-
-                </div> 
-
-                <!-- Pagination -->
-                <div class="bottompagination">
-
-                    <span class="navigation" role="navigation">
-
-                        {% include pagination.html %}
-
-                    </span>
-
-                </div>
-
-            </div>
+            {% include postlistbox.html %}
 
         </section>
