Adotado {%- -%} para remover espaços excedentes

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ title: Início
 
         <!-- Featured
         ================================================== -->
-            {% include postlistbox.html featured=true %}
+            {%- include postlistbox.html featured=true -%}
         <!-- Posts Index
         ================================================== -->
-            {% include postlistbox.html %}
+            {%- include postlistbox.html -%}
 
         </section>
